# QuantumSparse

./: .gitignore  CITATION.cff  LICENSE  README.md  ToDo.md  env.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: install.yml  pylint.yml  pytest-dtype.yml  pytest.yml  python-package-conda.yml
QuantumSparse/: __init__.py
QuantumSparse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
QuantumSparse/classical/: classical_mechanics.py
QuantumSparse/global_variables/: __init__.py
QuantumSparse/hilbert/: _hilbert.py  tools.py
QuantumSparse/matrix/: __init__.py  jacobi.py  matrix.py
QuantumSparse/old-spin/: flip.py  functions.py  interactions.py  shift.py  spin_operators.py
QuantumSparse/operator/: __init__.py  _operator.py  operator.py
QuantumSparse/spin/: __init__ .py  __init__.py  flip.py  functions.py  interactions.py  shift.py  spin.py  spin_operators.py  spin_system.py
QuantumSparse/statistics/: statistical_physics.py
QuantumSparse/symmetry/: translation.py
QuantumSparse/system/: system.py
QuantumSparse/tools/: __init__ .py  correlation.py  functions.py  optimize.py  quantum_mechanics.py
examples/: DM.py  Heinsenberg.py  Heisenberg-wih-symmetries.py  Heisenberg.py  Ising-radial.py  Ising-tangential.py  Ising.py  biquadratic.py  spins.py  super-operator4symmetry.py  symmeties.py  test-symmetries.py  translational.py  zeeman.py
examples-old/: Heisenberg-wih-symmetries.py  Ising-radial.py  align.py  biquadratic.py  spins.py  test-symmetries.py  translational.py
examples-old/V8/: hello.py  sus.py
examples-old/irreps/: test.ipynb
examples-old/non-collinear/: nc.py
examples/Cr8/: .gitignore  Cr8-U.json  clean.sh  run.sh
examples/Heisenberg/: Heisenberg.py
examples/PHI-comparison/: PHI-comparison.py
examples/V8/: build-H.py  build-S2.py  functions.py  hello.py  sus.py  test.py
examples/band/: band.py
examples/classical-Hamiltonian/: classical-Hamiltonian.ipynb
examples/free-sus/: sus.py
examples/irreps/: test.ipynb  test.py
examples/non-collinear/: nc.cart.ipynb  nc.cyl.ipynb  nc.cyl.py  nc.ipynb  nc.py
examples/sus/: sus.py
quantumsparse/: __init__.py  conftest.py
quantumsparse/bookkeeping/: __init__.py
quantumsparse/cli/: README.md  compute_magnetic_moments.py  compute_susceptibility.py  construct_hamiltonian.py  diagonalize.py  generate_hermitean_operators.py  get_temperatures.py  operator_summary.py  (+12 more)
scripts/: diagonalize.py  prepare-shift.py  qs-cli.py  summary.py
tests/: Cr8-U.json  test_E.py  test_Heisenberg.py  test_correlation.py  test_exp_value.py  test_first.py
tools/: generate_cli.py  generate_cli.sh  template.toml
(+79 files in other folders)
