[project]
name = "quantumsparse"
version = "1.0.0"
description = "An efficient python package based on `scipy.sparse` to work with quantum spin operators"
authors = [
    { name = "Elia Stocco", email = "eliastocco@gmail.com" }
]
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "typing-extensions",  # For better compatibility with type hints
    "matplotlib",
    "argparse",
    "dataclasses; python_version < '3.10'",  # Built-in from Python 3.10+
    "tqdm",
    "pathlib"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
diagonalize           = "quantumsparse.cli.diagonalize:main"
prepare_shift         = "quantumsparse.cli.prepare_shift:main"
prepare_spins         = "quantumsparse.cli.prepare_spins:main"
rotate_spins         = "quantumsparse.cli.rotate_spins:main"
operator_summary      = "quantumsparse.cli.operator_summary:main"
spin_summary          = "quantumsparse.cli.spin_summary:main"
construct_hamiltonian = "quantumsparse.cli.construct_hamiltonian:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

